--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <ion-icon name="search-outline"></ion-icon>
         </button> -->
 
-        <button class="btn btn-hover contact_us">Appellez Nous</button>
+        <a  href="tel:+22383460944" class="btn contact_us" style="align-content: center;">Appellez Nous</a>
 
         <button class="nav-toggle-btn" aria-label="Toggle Menu" data-menu-toggle-btn>
           <span class="line top"></span>
