--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
 
             </ul>
 
-            <button class="btn btn-hover">Commandez maintenant</button>
-
+            <!-- <button class="btn btn-hover">Commandez maintenant</button> -->
+            <a  href="tel:+22383460944" class="btn contact_us" style="align-content: center;">Commandez maintenant</a>
           </div>
 
         </div>
